--- a/CC.ioc
+++ b/CC.ioc
@@ -14,20 +14,23 @@ Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SPI2
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC3
-Mcu.Pin1=PB2
-Mcu.Pin2=PB10
-Mcu.Pin3=PB11
-Mcu.Pin4=PB12
-Mcu.Pin5=PA13 (JTMS-SWDIO)
-Mcu.Pin6=PA14 (JTCK-SWCLK)
-Mcu.Pin7=PB6
-Mcu.Pin8=PB7
-Mcu.Pin9=VP_RTC_VS_RTC_Activate
-Mcu.PinsNb=10
+Mcu.Pin1=PA2
+Mcu.Pin10=PB7
+Mcu.Pin11=VP_RTC_VS_RTC_Activate
+Mcu.Pin2=PA3
+Mcu.Pin3=PB2
+Mcu.Pin4=PB10
+Mcu.Pin5=PB11
+Mcu.Pin6=PB12
+Mcu.Pin7=PA13 (JTMS-SWDIO)
+Mcu.Pin8=PA14 (JTCK-SWCLK)
+Mcu.Pin9=PB6
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -48,6 +51,10 @@ PA13\ (JTMS-SWDIO).Mode=Serial_Wire
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Serial_Wire
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PB10.Mode=TX_Only_Simplex_Unidirect_Master
 PB10.Signal=SPI2_SCK
 PB11.GPIOParameters=GPIO_Label
@@ -154,6 +161,8 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI2.VirtualType=VM_MASTER
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 board=custom
